# NautilusTrader

./: .gitignore  AGENTS.md  README.md  USAGE.md  pyproject.toml
.codex/: config.toml  gsd-file-manifest.json
.codex/agents/: gsd-code-fixer.md  gsd-code-fixer.toml  gsd-debugger.md  gsd-debugger.toml  gsd-executor.md  gsd-executor.toml  gsd-intel-updater.md  gsd-intel-updater.toml  gsd-phase-researcher.md  gsd-phase-researcher.toml  gsd-plan-checker.md  gsd-plan-checker.toml  gsd-planner.md  gsd-planner.toml  gsd-project-researcher.md  gsd-project-researcher.toml  gsd-research-synthesizer.md  gsd-research-synthesizer.toml  gsd-roadmapper.md  gsd-roadmapper.toml  gsd-ui-researcher.md  gsd-ui-researcher.toml  gsd-user-profiler.md  gsd-user-profiler.toml  gsd-verifier.md  gsd-verifier.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  (+2 more)
configs/: settings.toml  smoke_optimization.toml
tests/: conftest.py  test_backtest_analytics.py  test_backtest_artifacts.py  test_backtest_contracts.py  test_backtest_runner.py  test_cli.py  test_compare.py  test_config.py  test_databento_discovery.py  test_ingest_validation.py  test_monte_carlo.py  test_optimization_analytics.py  test_optimization_results.py  test_optimization_stability.py  test_optimize_objective.py  test_risk.py  test_strategy_base.py  test_strategy_golden.py  test_strategy_indicators.py  test_strategy_logic.py  test_strategy_registry.py  test_tearsheet.py
(+319 files in other folders)
