[project]
name = "mgc-bt"
version = "0.1.0"
description = "Local MGC futures ingestion, backtesting, and optimization workflow."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "matplotlib>=3.10.0,<4.0.0",
    "optuna>=4.8.0,<5.0.0",
    "plotly>=6.0.0,<7.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.0,<10.0.0"]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
